# vehicle-assistant

./: .gitignore  CLAUDE.md  LICENSE  README.md  build.gradle  gradle.properties  local.properties  settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  llama_jni.cpp
app/src/main/java/com/example/vehicleassistant/agent/: AgentManager.java  AgentResponse.java  CommandPipeline.java  ContextManager.java
app/src/main/java/com/example/vehicleassistant/engine/: LlamaEngine.java  MockCommandExtractor.java  OutputParser.java  PromptBuilder.java  VideoSearchHelper.java
app/src/main/java/com/example/vehicleassistant/model/: ChatMessage.java  ModelConfig.java  ModelDownloadManager.java
app/src/main/java/com/example/vehicleassistant/ui/: ChatActivity.java  ChatAdapter.java  MainViewModel.java  SettingsActivity.java
app/src/main/java/com/example/vehicleassistant/ui/widgets/: ExecutionCard.java
app/src/main/java/com/example/vehicleassistant/vehicle/: FunctionRegistry.java  VehicleService.java  VehicleState.java
app/src/main/java/com/example/vehicleassistant/vehicle/models/: ActionCommand.java  ExecutionResult.java  ToolDefinition.java
app/src/main/res/drawable/: bg_assistant_bubble.xml  bg_circle_mic.xml  bg_dot_status_white.xml  bg_execution_card.xml  bg_input_pill.xml  bg_model_selector.xml  bg_user_bubble.xml  cursor_primary.xml  ic_waveform.xml
app/src/main/res/layout/: activity_chat.xml  activity_settings.xml  item_message_assistant.xml  item_message_user.xml  item_message_video_search.xml  widget_execution_card.xml
app/src/main/res/raw/: lottie_waveform.json
app/src/main/res/values/: colors.xml  dimens.xml  strings.xml  themes.xml
app/src/main/res/values-night/: colors.xml
docs/superpowers/plans/: 2026-07-05-vehicle-voice-assistant-plan.md  2026-07-05-voice-interaction.md
docs/superpowers/specs/: 2026-07-05-vehicle-voice-assistant-design.md  2026-07-05-voice-interaction-design.md
gradle/wrapper/: gradle-wrapper.properties
localLibs/codecaar/: build.gradle
localLibs/sparkaar/: build.gradle
opencl_stub/: opencl_stub.c
voicekit/: build.gradle.kts
voicekit/src/androidTest/java/com/cornex/asr/: ExampleInstrumentedTest.java
voicekit/src/main/: AndroidManifest.xml
voicekit/src/main/java/com/cornex/voicekit/: VoiceKitImpl.kt  VoiceKitManager.kt
voicekit/src/main/java/com/cornex/voicekit/api/: IInitResult.kt  IPermissionListener.kt  IVoiceKit.kt
voicekit/src/main/java/com/cornex/voicekit/asr/: AsrImpl.kt  IAsr.kt  IAsrResultListener.kt
voicekit/src/main/java/com/cornex/voicekit/constants/: VoiceKitDef.java
voicekit/src/main/java/com/cornex/voicekit/tts/: ITts.kt  ITtsSynthesisListener.kt  TtsEntities.kt  TtsImpl.kt
voicekit/src/main/java/com/cornex/voicekit/util/: AudioRecorderManager.java
voicekit/src/test/java/com/cornex/asr/: ExampleUnitTest.java
